# Startracker

./: .gitignore  README.md  package-lock.json  package.json
api/: .dockerignore  .env.example  Dockerfile  README.md  build-push.sh  cag_agent.py  cognee_agent.py  cognee_config.py  dev.sh  doc_loader.py  docker-run.sh  main.py  models.py  pyproject.toml  rag_agent.py  requirements.txt  run-docker.sh  urls.txt  webpages.txt
api/cognee/: Dockerfile  Dockerfile.cognee  api.py  cognee_agent.py  cognee_basic.py  cognee_query.py  query.txt  requirements.txt  run-docker.sh  train_cognee.py
api/models/: __init__.py  cag_agent.py  doc_loader.py  rag_agent.py
components/: AiInfo.tsx  CurrentlyViewing.tsx  CustomDropdown.tsx  FPSCounter.tsx  Globe.jsx  Globe.tsx  OrbitInfo.tsx  SatelliteImage.tsx  SatelliteInfo.tsx  SatelliteMenu.tsx  SatellitePopup.tsx  SidePanel.tsx  Spinner.tsx
hooks/: useClientStore.ts
pages/: _app.tsx  index.js  index.tsx
pages/api/: satellites.js  satellites.ts
public/: SpaceStation.avif  desktop.ini
services/: apiClient.ts  clientStore.ts  data.ts  satelliteData.ts  types.ts
styles/: globals.css
types/: celestrak.ts
