[tool.poetry]
name = "startracker-api"
version = "0.1.0"
description = "StarTracker API with RAG capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "models"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.7"
uvicorn = "0.27.1"
python-dotenv = "1.0.1"
google-genai = "1.11.0"
langchain = {extras = ["google-genai"], version = "*"}
langchain-community = "*"
langchain-google-vertexai = "*"
langchain-chroma = "*"
langchain-core = "*"
langgraph = "*"
chromadb = "*"
beautifulsoup4 = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 